tup/parse/testdata/error/output/function_declarations.tup
# missing function body
expecting "function body", got "" at row 1, col 29

# missing return type for fn
expecting "return type or _", got "{" at row 1, col 26

# unclosed parameter list
expecting ")", got "" at row 3, col 2

# function body missing closing brace
expecting "}", got "" at row 2, col 10
